# clag

./: .gitignore  README.md  pyproject.toml
clag/: __init__.py  cli.py  dsl.py  filters.py
clag/grammar/: agent.tx  env.tx  system.tx
clag/templates/: agentTemplate.py.jinja  envTemplate.py.jinja  mainTemplate.py.jinja
clag/tests/: build.test.py
examples/: coffee.maspy
examples/maspy-examples/: coffee.py
